--- a/static/searchlistings.css
+++ b/static/searchlistings.css
@@ -6,7 +6,12 @@ body {
   text-align: center;
 }
 
+h2 {
+  font-size: 26px;
+}
+
 .listing-box {
+  background-color: rgb(159, 190, 189);
   border: 1px solid #ddd; /* Add a border for definition */
   padding: 1rem; /* Add some padding inside the box */
   margin: 0.5rem 0; /* Add top and bottom margin between boxes */
@@ -20,6 +25,10 @@ body {
   margin-bottom: 0.5rem; /* Add some space below the image */
   align-self: center;
   margin: 0 auto;
+  width: 100%; 
+  height: 275px; 
+  object-fit: cover;
+  object-position: 25% 25%; 
 }
 
 .search {
@@ -34,4 +43,5 @@ body {
   max-width: 300px;
   background-color: rgb(194, 209, 156);
   border-radius: 5px;
+    position: fixed;
 }
