--- a/templates/addinfo.html
+++ b/templates/addinfo.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="content">
+
 <h2>Add or change your personal data</h2>
 
 <form method="post">
@@ -16,5 +18,7 @@ Phone number:<input tye="number" name="phone"><br>
 <h3>Info updated!</h3> <br>
 <a href="/">Back to the home screen</a>
 {% endif %}
+
+</div>
 
 {% endblock %}
