--- a/templates/makeuser.html
+++ b/templates/makeuser.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="content">
+
 <h2>Make a new user</h2>
 
 {% if error == 1 %}
@@ -16,5 +18,5 @@
 <p>Password again:<br><input type="text" name="passwordcheck"></p>
 <input type="submit" value="Create">
 </form>
-
+</div>
 {% endblock %}
